--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,1 +1,6 @@
-<p>inicio works!</p>
+<div class="row">
+    <div class="col-lg-4 offset-lg-4">
+        <h3>IBM Calculadora</h3>
+
+    </div>
+</div>
