--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-4 offset-lg-4">
-        <h3>IBM Calculadora</h3>
+        <h3 class="titulo">IBM Calculadora</h3>
 
     </div>
 </div>
