--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -2,16 +2,59 @@
     <div class="col-lg-4 offset-lg-4">
         <h3 class="titulo">IBM Calculadora</h3>
         <div class="row">
+            <!-- Items 1 -->
             <div class="col-lg-6">
                 <div class="fondoItem">
-                    1
+                    <div class="contenedor">
+                        <i class="fas fa-mars sexo"></i>
+                        <p>Masculino</p>
+                    </div>
                 </div>
             </div>
+            <!-- Items 2 -->
             <div class="col-lg-6">
                 <div class="fondoItem">
-                    2
+                    <div class="contenedor">
+                        <i class="fas fa-venus sexo"></i>
+                        <p>Femenino</p>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- Centro -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="fondoItem">
+                    <div class="conte">
+                        <p>Altura</p>
+                        <div>170</div>
+                        <div>cm</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Items 3 -->
+            <div class="col-lg-6">
+                <div class="fondoItem">
+ 
+                </div>
+            </div>
+            <!-- Items 4 -->
+            <div class="col-lg-6">
+                <div class="fondoItem">
+                    
+                </div>
+            </div>
+        </div>
+
+        <!-- Boton -->
+
+        <div class="row">
+            <div class="col-lg-12">
+                <button class="btn btn-primary btn-lg btn-block btn-color">Calcular</button>
+            </div>
+        </div>
+
     </div>
 </div>
