--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -8,3 +8,16 @@
 .sexo{
     font-size: 270%;
 }
+
+.estiloNumero{
+    font-size: 32px;
+    /* Negrita */
+    font-weight: 800;
+    margin-top: -30px;
+}
+
+.cm{
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: -10px;
+}
