--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -25,10 +25,12 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="fondoItem">
-                    <div class="conte">
+                    <div class="contenedor">
                         <p>Altura</p>
-                        <div>170</div>
-                        <div>cm</div>
+                        <div class="estiloNumero">170
+                            <span class="cm">cm</span>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
