--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -30,7 +30,8 @@
                         <div class="estiloNumero">170
                             <span class="cm">cm</span>
                         </div>
-                        
+                        <!-- Barra de rango -->
+                        <input type="range" class="form-range">
                     </div>
                 </div>
             </div>
@@ -39,13 +40,36 @@
             <!-- Items 3 -->
             <div class="col-lg-6">
                 <div class="fondoItem">
- 
+
+                    <div class="contenedor">
+                        <p>Peso</p>
+                        <div class="estiloNumero">
+                            60
+                        </div>
+                        <div>
+                            <i class="fas fa-minus sumaResta"></i>
+                            <i class="fas fa-plus sumaResta"></i>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
             <!-- Items 4 -->
             <div class="col-lg-6">
                 <div class="fondoItem">
-                    
+
+                    <div class="contenedor">
+                        <p>Edad</p>
+                        <div class="estiloNumero">
+                            25
+                        </div>
+                        <div>
+                            <i class="fas fa-minus sumaResta"></i>
+                            <i class="fas fa-plus sumaResta"></i>
+                        </div>
+                    </div>  
+
                 </div>
             </div>
         </div>
