--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -21,3 +21,20 @@
     font-weight: 400;
     margin-left: -10px;
 }
+.form-range
+{
+    padding: 0px 20px;
+}
+
+input[type=range]::-webkit-slider-thumb
+{
+    background:  #FF3366;
+}
+
+.sumaResta{
+    cursor: pointer;
+    background-color: #ff4c4f5e;
+    padding: 7px;
+    border-radius: 15px;
+    margin: 0px 3px;
+}
