--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -33,8 +33,14 @@ input[type=range]::-webkit-slider-thumb
 
 .sumaResta{
     cursor: pointer;
+    transition: 0.2s;
     background-color: #ff4c4f5e;
     padding: 7px;
     border-radius: 15px;
     margin: 0px 3px;
+}
+
+.sumaResta:active{
+    transition: 0.2s;
+    background: #ac1a3e;
 }
