--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -27,7 +27,7 @@
                 <div class="fondoItem">
                     <div class="contenedor">
                         <p>Altura</p>
-                        <div class="estiloNumero">170
+                        <div class="estiloNumero">{{ altura }}
                             <span class="cm">cm</span>
                         </div>
                         <!-- Barra de rango -->
@@ -44,11 +44,11 @@
                     <div class="contenedor">
                         <p>Peso</p>
                         <div class="estiloNumero">
-                            60
+                            {{ peso }}
                         </div>
                         <div>
-                            <i class="fas fa-minus sumaResta"></i>
-                            <i class="fas fa-plus sumaResta"></i>
+                            <i class="fas fa-minus sumaResta" (click)="peso = peso - 1"></i>
+                            <i class="fas fa-plus sumaResta" (click)="peso = peso + 1"></i>
                         </div>
                     </div>
 
@@ -62,11 +62,11 @@
                     <div class="contenedor">
                         <p>Edad</p>
                         <div class="estiloNumero">
-                            25
+                            {{ edad }}
                         </div>
                         <div>
-                            <i class="fas fa-minus sumaResta"></i>
-                            <i class="fas fa-plus sumaResta"></i>
+                            <i class="fas fa-minus sumaResta" (click)= "edad = edad - 1"></i>
+                            <i class="fas fa-plus sumaResta" (click)= "edad = edad + 1"></i>
                         </div>
                     </div>  
 
