--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -3,9 +3,9 @@
         <h3 class="titulo">IBM Calculadora</h3>
         <div class="row">
             <!-- Items 1 -->
-            <div class="col-lg-6">
-                <div class="fondoItem">
-                    <div class="contenedor">
+            <div class="col-lg-6" >
+                <div class="fondoItem" [ngClass]="{ 'sexoDesactivado': sexo === 'Femenino' }">
+                    <div class="contenedor" style="cursor: pointer;"  (click)="femenino()">
                         <i class="fas fa-mars sexo"></i>
                         <p>Masculino</p>
                     </div>
@@ -13,8 +13,8 @@
             </div>
             <!-- Items 2 -->
             <div class="col-lg-6">
-                <div class="fondoItem">
-                    <div class="contenedor">
+                <div class="fondoItem" [ngClass]="{ 'sexoDesactivado': sexo === 'Masculino' }" >
+                    <div class="contenedor" style="cursor: pointer;" (click)="masculino()">
                         <i class="fas fa-venus sexo"></i>
                         <p>Femenino</p>
                     </div>
@@ -31,7 +31,7 @@
                             <span class="cm">cm</span>
                         </div>
                         <!-- Barra de rango -->
-                        <input type="range" class="form-range">
+                        <input type="range" (input)="cambiarAltura($event)" [value]="altura" min="120" max="220" class="form-range">
                     </div>
                 </div>
             </div>
