--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -78,7 +78,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <button class="btn btn-primary btn-lg btn-block btn-color">Calcular</button>
+                <!-- el routerLink es para redireccionar -->
+                <button routerLink="/resultado" class="btn btn-primary btn-lg btn-block btn-color">Calcular</button>
             </div>
         </div>
 
