--- a/src/app/components/resultado/resultado.component.html
+++ b/src/app/components/resultado/resultado.component.html
@@ -6,9 +6,9 @@
                 <div class="fondoItem">
 
                     <div class="contenedor">
-                        <p class="resultado">Resultado</p>
-                        <p class="estiloNumero">20</p>
-                        <p class="interpretacion">Interpretacion</p>
+                        <p class="resultado">{{ resultado_ }}</p>
+                        <p class="estiloNumero">{{bmi}}</p>
+                        <p class="interpretacion">{{interpretacion_}}</p>
                     </div>
 
                 </div>
